# interpreter2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: StandardSettings.cmake
examples/: conditional.model  empty.model  expressions.model  factorial.model  is_prime.model  iterate.model  long_assign.model  print_base.model  read_and_write.model  simple.model  simple_bool.model
include/: interpreter.hpp
include/interpreter/ast/: types.hpp  types_helpers.hpp  visitor.hpp
include/interpreter/instructions/: instructions.hpp  operations.hpp  types.hpp  writer.hpp
include/interpreter/lex/: types.hpp
include/interpreter/lexer/: lexeme.hpp  lexems.hpp  lexer.hpp  types.hpp
include/interpreter/syntax/: types.hpp  visitor.hpp
include/interpreter/utils/: format.hpp  generator.hpp  type_map.hpp
include/interpreter/utils/types/: types.hpp  types_map.hpp  types_variant.hpp
include/lex/: lexeme.h  lexems.h  types.h
include/syntax/: visitor.h
include/visitor/: visitor.h
lib/: CMakeLists.txt
lib/ast/: CMakeLists.txt  visitor.cpp
lib/instructions/: CMakeLists.txt  instructions.cpp  writer.cpp
lib/lex/: lexems.cpp  print_lexems.cpp
lib/lexer/: CMakeLists.txt  lexems.cpp  lexer.cpp  print_lexems.cpp
lib/syntax/: CMakeLists.txt  visitor.cpp
src/: CMakeLists.txt  interpreter.cpp  main.cpp
src/lex/: lexeme.cpp  lexems.cpp  print_lexems.cpp
src/syntax/: visitor.cpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt
tests/src/ast/: mock_model_visitor.hpp  test_ast.cpp
tests/src/interpreter/: test_interpreter.cpp  test_interpreter.hpp
tests/src/lex/: test_lex.cpp
tests/src/lexer/: test_lexer.cpp
